--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,19 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  # title: "Talks"
+  # url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+   - title: "Data"
+    url: /data/
+ 
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "中文"
+    url: /Chinese/
