--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "Your Sidebar Name"
-  avatar           : "profile.png"
+  avatar           : "doggy.jpg"
   bio              : "Your biography for the left-hand sidebar"
-  location         : "YangPu,ShangHai"
+  location         : "Yangpu, Shanghai"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
