--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "Shang Hai-CHN"
 title                    : "Liang LI / 李 靓"
 title_separator          : "-"
 name                     : &name "Liang LI"
-description              : &description "personal description"
+description              : &description "Liang LI"
 url                      : https://liliangtian11.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "liliangtian11/liliangtian11.github.io"
