--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Liang LI"
   avatar           : "doggy.jpg"
-  bio              : "M.A., International Relations, Fudan University"
-  location         : "Yangpu, Shanghai"
+  bio              : "Master student, IR, Fudan University"
+  location         : "Shanghai,China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
