--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Liang LI"
   avatar           : "doggy.jpg"
-  bio              : "Master student, IR, Fudan University"
+  bio              : "M.A., International Relations, Fudan University"
   location         : "Shanghai,China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
