--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Publications"
     url: /publications/
     
-  - title: "Working Papers"
-    url: /workingparpers/
+ # - title: "Working Papers"
+  #  url: /workingparpers/
 
   #- title: "Talks"
   # url: /talks/    
