--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Liang LI"
   avatar           : "doggy.jpg"
-  bio              : "M.A., International Relations, Fudan University"
-  location         : "Shanghai,China"
+  bio              : "PhD Student, Political Science, University of Houston"
+  location         : "Houston,Tx,US"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            : "liliangtian11@gmail"
+  email            : "liliangtian11@gmail;lli65@uh.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
