--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Liang LI"
+  name             : "LI, Liang"
   avatar           : "doggy.jpg"
-  bio              : "PhD Student, Political Science, University of Houston"
-  location         : "Houston,Tx,US"
+  bio              : "Ph.D. Student, Political Science, University of Houston"
+  location         : "Houston, TX, US"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
